fix:Fix:google Question and Answer box overflow

--- a/src/content-script/styles.scss
+++ b/src/content-script/styles.scss
@@ -214,6 +214,7 @@ span.glarity--header__logo {
     padding: 0;
     border: none;
     background: none;
+    min-width: auto;
   }
 
   .glarity--chat__item:not(.glarity--chat__item--user) {
